--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+	"gulp-sass": "^3.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    
+  }
 }
