--- a/package.json
+++ b/package.json
@@ -22,17 +22,18 @@
   },
   "homepage": "https://github.com/UjjwalUpadhyay/GulpRepo#readme",
   "devDependencies": {
+    "assemble": "^0.24.3",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
+    "gulp-extname": "^0.2.2",
+    "gulp-htmlmin": "^4.0.0",
     "gulp-mocha": "^5.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^3.0.0",
-	"gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0"
   },
-  "dependencies": {
-    
-  }
+  "dependencies": {}
 }
