--- a/package.json
+++ b/package.json
@@ -26,17 +26,25 @@
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
+    "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
+    "gulp-data": "^1.3.1",
     "gulp-extname": "^0.2.2",
+    "gulp-file-tree": "^0.4.1",
     "gulp-htmlmin": "^4.0.0",
     "gulp-inject": "^4.3.0",
+    "gulp-json-transform": "^0.4.5",
     "gulp-mocha": "^5.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sitemap-generator": "^0.1.6",
+    "gulp-swig": "^0.8.0",
+    "gulp-template": "^5.0.0",
     "gulp-uglify": "^3.0.0",
-    "marked": "^0.3.12"
+    "marked": "^0.3.12",
+    "path": "^0.12.7",
+    "run-sequence": "^2.2.1"
   },
   "dependencies": {}
 }
