--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-htmlmin": "^4.0.0",
     "gulp-inject": "^4.3.0",
     "gulp-json-transform": "^0.4.5",
+    "gulp-markdown": "^2.0.1",
     "gulp-mocha": "^5.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
