--- a/package.json
+++ b/package.json
@@ -29,20 +29,24 @@
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
+    "gulp-changed": "^3.2.0",
     "gulp-data": "^1.3.1",
     "gulp-extname": "^0.2.2",
     "gulp-file-tree": "^0.4.1",
+    "gulp-header": "^1.8.9",
     "gulp-htmlmin": "^4.0.0",
     "gulp-inject": "^4.3.0",
     "gulp-json-transform": "^0.4.5",
     "gulp-markdown": "^2.0.1",
     "gulp-mocha": "^5.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-rev": "^8.1.1",
     "gulp-sass": "^3.1.0",
     "gulp-sitemap-generator": "^0.1.6",
     "gulp-swig": "^0.8.0",
     "gulp-template": "^5.0.0",
     "gulp-uglify": "^3.0.0",
+    "gulp-watch": "^5.0.0",
     "marked": "^0.3.12",
     "path": "^0.12.7",
     "run-sequence": "^2.2.1"
