--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/UjjwalUpadhyay/GulpRepo#readme",
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.37",
     "assemble": "^0.24.3",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
