--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "fs": "0.0.1-security",
+    "git-guppy": "^2.1.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
     "gulp-changed": "^3.2.0",
@@ -38,6 +39,7 @@
     "gulp-header": "^1.8.9",
     "gulp-htmlmin": "^4.0.0",
     "gulp-inject": "^4.3.0",
+    "gulp-jshint": "^2.1.0",
     "gulp-json-transform": "^0.4.5",
     "gulp-markdown": "^2.0.1",
     "gulp-mocha": "^5.0.0",
@@ -49,6 +51,8 @@
     "gulp-template": "^5.0.0",
     "gulp-uglify": "^3.0.0",
     "gulp-watch": "^5.0.0",
+    "jshint": "^2.9.5",
+    "jshint-stylish": "^2.2.1",
     "marked": "^0.3.12",
     "path": "^0.12.7",
     "run-sequence": "^2.2.1"
