--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-data": "^1.3.1",
     "gulp-extname": "^0.2.2",
     "gulp-file-tree": "^0.4.1",
+    "gulp-filter": "^5.1.0",
     "gulp-header": "^1.8.9",
     "gulp-htmlmin": "^4.0.0",
     "gulp-inject": "^4.3.0",
