--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gulp-template": "^5.0.0",
     "gulp-uglify": "^3.0.0",
     "gulp-watch": "^5.0.0",
+    "guppy-post-update": "^0.2.1",
     "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1",
     "marked": "^0.3.12",
@@ -53,5 +54,7 @@
     "run-sequence": "^2.2.1",
     "shelljs": "^0.8.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "slack-node": "^0.1.8"
+  }
 }
